# commit-reveal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  security.yml
commit_reveal/: __init__.py  audit.py  cli.py  core.py  migrate.py  secure_cli.py  validation.py  zkp.py
docs/: README.md  api-reference.md  getting-started.md  security-guide.md  use-cases.md
documentation/: api-reference.md  changelog.md  cli.md  contributing.md  getting-started.md  index.md
documentation/advanced/: error-handling.md  hash-algorithms.md  zkp-internals.md
documentation/security/: audit-trail.md  best-practices.md  index.md
documentation/use-cases/: auctions.md  blockchain.md  gaming.md  index.md  multi-party.md  voting.md
tests/: conftest.py  test_cli.py  test_core.py  test_performance.py  test_properties.py
