[metadata]
name = commit-reveal
version = 0.1.0
description = A Python library that implements commit-reveal schemes using zero-knowledge proofs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipankar/commit-reveal
author = Dipankar Sarkar
author_email = dipankar.sarkar@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security :: Cryptography

[options]
packages = find:
python_requires = >=3.7
install_requires =

[options.extras_require]
dev = 
    pytest>=6.0
    pytest-cov>=2.0

[options.packages.find]
where = .